# CAROUSEL-Core

./: .gitignore  CMakeLists.txt  conanfile.txt
Carousel/: CMakeLists.txt  pythonBindings.py  xsdFunctions.cmake
Carousel/Data/Database/: DatabaseConfiguration.h
Carousel/Data/Schemas/: carouselConfigurations.xsd  carouselModels.xsd
Carousel/Data/SharedTypes/: CarouselConfigurations.cpp  CarouselConfigurations.h  carouselModels.h
Carousel/Helpers/: ConvertToString.h
Carousel/include/Callbacks/: CallbackDefinitions.h  Callbacks.h  ErrorCallback.h  LogCallback.h  MessageCallBack.h  ProgressUpdateCallback.h  ScriptFinishedCallback.h
Carousel/include/Core/: CarouselCore.h
Carousel/include/Core/BaseTypes/: CarouselSandbox.h  XmlSerializable.h
Carousel/include/Core/Interfaces/: ISerializableObject.h  Ipc.h
Carousel/include/Data/Database/: DatabaseAdapterManager.h  DatabaseColumn.h  DatabaseConfiguration.h  DatabaseConstants.h  DatabaseTable.h  IDatabase.h  IDatabaseObject.h  Sqlite3Database.h
Carousel/include/Data/Models/: Configurations.h  Project.h
Carousel/include/Data/Schemas/: carouselConfigurations.xsd  carouselModels.xsd
Carousel/include/Data/SharedTypes/: CarouselConfigurations.cpp  CarouselConfigurations.h  carouselModels.cpp  carouselModels.h
Carousel/include/Exceptions/: DatabaseConstraintException.h  DatabaseNotConnectedException.h  DatabaseQueryFailed.h  IpcCommunicationException.h  NotImplementedException.h
Carousel/include/Helpers/: Converters.h  String.h
Carousel/include/IpcTools/: Ipc.h  IpcPipeHandler.h
Carousel/include/Logging/: CarouselLogger.h
Carousel/include/Scripting/: CarouselModule.h  carouselDataPythonBindings.h  carouseldata.pyi
Carousel/src/Data/Database/: Sqlite3Database.cpp
Carousel/src/Portable/Data/Database/: Sqlite3Database.cpp
Carousel/src/Portable/IpcTools/: IpcPipeHandler.cpp
Carousel/src/Windows/IpcTools/: IpcPipeHandler.cpp
DataModels/: CMakeLists.txt
DataModels/Database/: DatabaseTable.h  SerializableObject.h
DataModels/include/: carouselModels.cpp  carouselModels.h
Tests/: CMakeLists.txt  Core_BaseTypes_Tests.cpp  DataModels_Tests.cpp  Database_Tests.cpp  EmbeddedPython_Tests.cpp  Ipc_Tests.cpp
Tests/Mock/: ConsoleMock.cpp
Tests/Scripts/: ConfigurationsScriptTests.py  LoggingScriptTests.py
